<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.codingassessment.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/light_blue"
            app:boxBackgroundMode="filled"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_text_here"
                android:text="@={viewModel.text}"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/square_background"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="79dp"
            android:layout_height="60dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/square_background"
            android:onClick="@{() -> viewModel.onOkButtonClick(viewModel.text)}"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="35dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/recyclerview_outline"
                app:adapter="@{viewModel.getAdapter()}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:scrollbars="vertical" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
